@@ -101,6 +101,7 @@ Changes in current version:
  o Make vsnprintf() returns consistent on win32.
  o Fix connection keep-alive behavior for HTTP/1.0
  o Fix use of freed memory in event_reinit; pointed out by Peter Postma
+ o constify struct timeval * where possible
 
 Changes in 1.4.0:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
